--- a/index.html
+++ b/index.html
@@ -24,15 +24,7 @@
         <button class="lang-btn" data-lang="pt" onclick="changeLanguage('pt')">🇧🇷 PT</button>
     </div>
 
-    <!-- Music Player -->
-    <div class="music-player">
-        <button class="music-toggle" id="music-toggle" onclick="toggleMusic()">
-            <span id="music-icon">🔇</span>
-        </button>
-        <div class="volume-control">
-            <input type="range" id="volume-slider" min="0" max="100" value="50" class="pixel-slider">
-        </div>
-    </div>
+    <!-- Music player removed - no audio file available -->
 
     <!-- Audio removed to prevent 404 -->
 
